# qrcode

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conanfile.py  meson.build
src/: main.cpp
static/js/: login.js  signup.js
templates/: about.mustache  home.mustache  index.mustache  leaderboard.mustache  login.mustache  secret.mustache  signup.mustache
